@@ -19,6 +19,11 @@
         </div>
         <div class="revid" tal:content="string:Revision ID: ${change/revid}"></div>
         <div class="information" tal:content="structure python:util.fixed_width(change.comment)"></div>
+        <div class="bug" tal:repeat="bug change/bugs">
+            <a tal:attributes="title string:${bug};
+                               href python:url([bug], clear=1)"
+               tal:content="bug"></a>
+        </div>
     </div>
     <ul id="list-files" tal:condition="file_changes">
       <tal:block content="structure python:file_change_summary(url, change, file_changes, 'fragment', currently_showing)" />
