@@ -4,6 +4,8 @@ What's changed in loggerhead?
 dev [future]
 ---------------
 
+    - Add bug links in revision informations (Alexandre Garnier, #314052)
+
     - Make sure that binary files aren't annotated. (Martin Albisetti,
       #258848)
 
